# droid_slam_covariance_models

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake_modules/: FindSymForce.cmake
cpp/: .gitignore  .vimrc  .vimrc.local  CMakeLists.txt
cpp/cmake_modules/: FindSymForce.cmake
cpp/droid_cvm/: CMakeLists.txt
cpp/droid_cvm/include/: numerical_derivative_py.h
cpp/droid_cvm/include/custom_factors/: droid_DBA_factor.h
cpp/droid_cvm/include/fg_parser/: fg_builder.h
cpp/droid_cvm/src/apps/: fg_app.cpp  regression.cpp
cpp/droid_cvm/src/libs/: droid_DBA_factor.cpp  fg_builder.cpp  fg_reader.cpp  numerical_derivative_py.cpp
cpp/droid_cvm/wrap/: droid_dba_factor_pybinder.cpp  droid_factors_pybinder.cpp
cpp/include/: fg_builder.h
cpp/src/apps/: fg_app.cpp
cpp/tests/: CMakeLists.txt  test_custom_factor.cpp  test_droid_factor_py.py  test_expression_factor.cpp  test_liegroup_operations.cpp  type_compatibility_test.cpp
include/: fg_reader.h
python/: setup.py
python/cmd_tools/: animation.sh  plot_covariance_of_factor_graphs.sh  run_factor_graph_analysis.sh  simulation.sh
python/factor_graph_insights/: animations.py  app.py  app_2.py  ba_problem.py  boxplot.ipynb  fg_builder.py  graph_analysis.py  main_cli.py  process_data.py  simulation.py  static_visualization.py  visualization_utils.py
python/factor_graph_insights/custom_factors/: droid_error_functions.py  droid_slam_expression_factor.py  droid_slam_residual_single_factor.py
python/factor_graph_insights/tests/: test_ba_problem.py  test_droid_dba_factor.py  test_fg_builder.py  test_geometric_types.py  test_graph_analysis.py  test_gtsam_funcs.py
python/factor_graph_insights/tests/data/: fg_data.pkl
python/factor_graph_insights/tests/data/output/: boxplot_input_MH_01_fg_0029_id_0206.pkl  boxplot_input_MH_02_fg_0048_id_0404.pkl  boxplot_input_MH_04_fg_0038_id_0208.pkl  boxplot_input_MH_05_fg_0025_id_0152.pkl  boxplot_input_V1_01_fg_0027_id_0218.pkl  boxplot_input_V1_03_fg_0031_id_0112.pkl  boxplot_input_V2_03_fg_0055_id_0172.pkl
scripts/: residuals.py
src/: linear_regression.cpp  regression.cpp  regression_residuals.py  residuals.py  type_compatibility.cpp
src/cpp/: fg_builder.cpp
src/python/factor_graph_insights/: README.md  fg_builder.py
src/python/factor_graph_insights/custom_factors/: droid_slam_residual_single_factor.py
src/python/factor_graph_insights/tests/: test_gtsam_funcs.py
src/python/symforce/sym/: __init__.py
tests/: type_compatibility_test.cpp
visualization/: README.md  covariance_visualization.py  covisibility_graph.py
